--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@astrojs/check": "^0.2.1",
     "@astrojs/tailwind": "^5.0.2",
+    "@fontsource/ibm-plex-mono": "^5.0.8",
+    "@fontsource/twinkle-star": "^5.0.17",
     "astro": "^3.4.0",
+    "sharp": "^0.32.6",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
